# Chess-Engine

./: .gitignore  Bitboards.cpp  Bitboards.h  CMakeLists.txt  README.md  attacks.cpp  attacks.h  board.cpp  board.h  leapers_attack.cpp  leapers_attack.h  magic_numbers.txt  main.cpp  run  sliders_attack.cpp  sliders_attack.h  xorshift_random.cpp  xorshift_random.h
